[project]
name = "sse-fastapi-handson"
version = "0.1.0"
description = "FastAPI SSE hands-on example"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
sse-client = "sse_fastapi.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sse_fastapi"]
