[project]
name = "hprof-oom-analyzer"
version = "0.1.0"
description = "JVM heap dump(hprof) OOM 분석 GUI 도구"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hprof-oom-analyzer = "hprof_oom_analyzer.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "pyinstaller>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hprof_oom_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
