[project]
name = "rag-study"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2,<2",
    "ipykernel>=6.29,<7",
    "ipywidgets>=8.1,<9",
    "langchain>=1.3,<2",
    "langchain-community>=0.4.1,<0.5",
    "langchain-openai>=1.2.1,<2",
    "numpy>=2.2,<3",
    "openai>=2.37,<3",
    "pandas>=2.3,<3",
    "python-dotenv>=1.2,<2",
]

[project.optional-dependencies]
finetuning = [
    "accelerate>=1.11,<2",
    "bitsandbytes>=0.48,<0.49",
    "datasets>=4.0,<5",
    "huggingface-hub>=0.34,<1",
    "peft>=0.18,<0.19",
    "torch>=2.9,<3",
    "transformers>=4.57,<5",
    "wandb>=0.23,<0.24",
]

[tool.uv]
package = false
