[tool.poetry]
name = "python-app"
version = "0.1.0"
description = "this is for hashicorp vault intergraiton"
authors = ["choisungwook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymysql = "^1.1.1"
hvac = "^2.3.0"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
