[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP kubernetes demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "kubernetes>=29.0.0",
    "mcp[cli]>=1.8.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.34.2",
]
