[project]
name = "network-ai-backend"
version = "0.1.0"
description = "AI Networking Cookbook Ch.7 - Streamlit 데모를 FastAPI 백엔드로 옮긴 v1~v4 단계별 코드"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "openai>=1.40.0",
  "sqlalchemy>=2.0",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.0",
  "pydantic>=2.7",
]
