[project]
name = "network-copilot"
version = "0.1.0"
description = "AI Networking Cookbook Ch.8 — Network Co-Pilot 리팩토링 버전"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
copilot = "network_copilot.cli:chat"
evaluate = "network_copilot.evaluator:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_copilot"]
