[tool.poetry]
name = "memo-project"
version = "0.1.0"
description = ""
authors = ["choisungwook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-ninja = "^1.3.0"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

