[package]
name = "gitui-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop GUI for akbun-gitui"

[lib]
name = "gitui_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gitui-core = { path = "../gitui-core" }
git2 = "0.20"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
